--- a/public/index.html
+++ b/public/index.html
@@ -263,7 +263,7 @@
 												
 												<ul>
 
-													<li><strong><a target="_blank" href="https://loyal.love/">loyal.love</a></strong>: my humble cypherpunk-nomad zine</b>; <strong><a target="_blank" href="https://github.com/shadowy-forest">forest</a></strong>: subversive <b>open-source org on metas</b></li>
+													<li><strong><a target="_blank" href="https://loyal.love/">loyal.love</a></strong>: my cypherpunk-nomad zine</b>; <strong><a target="_blank" href="https://github.com/shadowy-forest">forest</a></strong>: subversive <b>open-source org on metas</b></li>
 													<li><strong><a target="_blank" href="https://github.com/autistic-symposium/">The Autistic Symposium</a></strong>: my <b>open-source R&D org on Blockchains; Privacy; Physics</b></li> 
 													<li><strong><a target="_blank" href="https://mirror.xyz/0xf382eE4C0c752C41d083cBF2106506884787c190/crowdfunds/0x93c0D19A989CB4762522E782158D10265895977C">A movie we <i>almost</i> made</a></strong>; my <b><a href="https://mm3r.saturnus.tv/" target="_blank">anon coven</a></b>; <b>i'm an <a href="https://choices.saturnus.tv/" target="_blank">advanced astrologer + tarot reader</a> </b></li>
 													<li><strong>Post-graduate e-books: <a target="_blank" href="http://www.astro.sunysb.edu/steinkirch/books/group.pdf">Group Theory</a></strong>; <strong><a target="_blank" href="https://www.freebookcentre.net/physics-books-download/Introduction-to-Quantum-Field-Theory-by-Marina-von-Steinkirch.html">Quantum Field Theory</a></strong>; <strong><a target="_blank" href="http://www.astro.sunysb.edu/steinkirch/books/qi.pdf">Quantum Information</a></strong></li>
