--- a/public/index.html
+++ b/public/index.html
@@ -164,7 +164,7 @@
 								                    			<div class="f6 lh-condensed user-status-header d-inline-flex user-status-emoji-only-header circle">
 								                      				<div class="user-status-emoji-container flex-shrink-0 mr-2 d-flex flex-items-center flex-justify-center ">
 								                        				<div>
-																<g-emoji class="g-emoji">💎</g-emoji>
+																<g-emoji class="g-emoji">🇺🇸</g-emoji>
 															</div> 
 								                      				</div>
 								                    			</div>
