--- a/public/index.html
+++ b/public/index.html
@@ -235,11 +235,10 @@
 											<article class="markdown-body entry-content container-lg f5">
 												<h3><span style="color: rgb(148, 97, 199);">Selected Interests</span></h3>
 												<ol>
-													<li><strong>Astrophysics</strong> → Quantum Field Theories; Group Theory</li>
-													<li><strong>AI && ML</strong> → Agents; LLMs; Decentralized Training; AGI</li>
-													<li><strong>Blockchains</strong> → DeSci; MEV; Protocols; Game Theory</li>
-													<li><strong>Security</strong> → Cryptography; Diff. Privacy; MPC; TEE; ZK</li>
-													<li><strong>Clean Code</strong> → Rust; Python; Solidity;... Infra; Algorithms</li>
+													<li><strong>Astrophysics</strong> → Quantum Field Theories; Group Theory; Astronomy; Philosophy</li>
+													<li><strong>AI && ML</strong> → Agents; LLMs; Decentralized Training; AGI; Theorem Proving</li>
+													<li><strong>Blockchains</strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZK </li>
+													<li><strong>Clean Code</strong> → Rust; Python; Solidity; Lean; Correctness; Infra; Algorithms</li>
 												</ol>
 		
 												<hr>
