--- a/public/index.html
+++ b/public/index.html
@@ -236,9 +236,9 @@
 												<h3><span style="color: rgb(148, 97, 199);">Selected Interests</span></h3>
 												<ol>
 													<li><strong>Astrophysics</strong> → Quantum Field Theories; Group Theory; Astronomy; Philosophy</li>
-													<li><strong>AI && ML</strong> → Agents; LLMs; Decentralized Training; AGI; Theorem Proving</li>
-													<li><strong>Blockchains</strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZK </li>
-													<li><strong>Clean Code</strong> → Rust; Python; Solidity; Lean; Correctness; Infra; Algorithms</li>
+													<li><strong>AI && ML</strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
+													<li><strong>Blockchains</strong> → DeSci; Macro; MEV; Protocols; Games; Cryptography; ZK; MPC; TEE </li>
+													<li><strong>Clean Code</strong> → Rust; Python; Solidity; Lean;... Correctness; Infra; Algorithms</li>
 												</ol>
 		
 												<hr>
