--- a/public/index.html
+++ b/public/index.html
@@ -235,7 +235,7 @@
 											<article class="markdown-body entry-content container-lg f5">
 												<h3><span style="color: rgb(148, 97, 199);">Selected Interests</span></h3>
 												<ol>
-													<li><strong>Astrophysics</strong> → Quantum Field Theories; Group Theory; Astronomy; Philosophy</li>
+													<li><strong>Astrophysics</strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
 													<li><strong>AI && ML</strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
 													<li><strong>Blockchains</strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZK </li>
 													<li><strong>Clean Code</strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
