--- a/public/index.html
+++ b/public/index.html
@@ -245,7 +245,7 @@
 												<h3><span style="color: rgb(148, 97, 199);">Selected Experiences</span></h3>
 												
 												<ul>  
-													<li><strong>I am currently looking for opportunies as Principal/Staff/Senior Software Engineer</b> in the AI/ML/Blockchain space (contact me at <a href="mailto:b@bt3gl.xyz">b@bt3gl.xyz</a>)</li>
+													<li><strong>I'm currently looking for opportunies as Principal/Staff/Senior Software Engineer</b> in the AI/Blockchain space (contact me at <a href="mailto:b@bt3gl.xyz">b@bt3gl.xyz</a>)</li>
 													<li><strong>Co-founded <a target="_blank" href="https://urani.trade">urani.trade</a></strong>, an <b>R&D org for toxic-MEV minimization && DeFi gamification</b></li> 
 													<li><strong>Blockchain Researcher && Engineer</strong>; XP from: <strong><a target="_blank" href="https://ethereum.foundation/">Ethereum PSE</strong></a>, <strong><a target="_blank" href="https://app.rook.fi/en/trade">KeeeperDAO</strong></a>, <strong><a target="_blank" href="/images/immunefi.png">Immunefi</a></strong> </li>
 													<li><strong>Founder <a target="_blank" href="https://vimeo.com/638007916">Filmmaker/Midsummer DAO</a></strong>; <b><a target="_blank" href="https://story.mirror.xyz/gbwXf_IOm4BkUNmWYWz5M-47Te8ELuQngClR8iHFxDU">"Story"</a></b>; arxived by  <b><a target="_blank" href="https://storyteller-mint-app-git-main-getstory.vercel.app/">Loot Story NFT</b></a> (<b><a target="_blank" href="https://etherscan.io/address/0x9213256fe89fa0428e8546910a8d78180dbbdc38">contract</b></a>)</li>
