--- a/public/index.html
+++ b/public/index.html
@@ -237,7 +237,7 @@
 			
 													<li><strong>AI && ML</strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
 													<li><strong>Astrophysics</strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
-													<li><strong>Blockchains</strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
+													<li><strong>Blockchains</strong> → <a href="https://gist.github.com/von-steinkirch/f0d4b40af214f7e23d23b496cc4d113e" target="_blank">DeSci</a>; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
 													<li><strong>Clean Code</strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
 												</ol>
 		
