--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
 										<h4>
 											<br>Theoretical Astrophysicist turned AI Principal Software Engineer. Science && Engineering are my Life. Building the Future with Integrity, Grit, and Dedication. 
 											 <br><br>
-											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub</a> <br>
+											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub page</a> <br>
 											<a href="https://gist.github.com/von-steinkirch/7607c9a481a49dadfd1dcdd9acad15c5" target="_blank">⚡️ My 10-Year Goals</a>
 										</h4>
 
