--- a/public/index.html
+++ b/public/index.html
@@ -176,9 +176,9 @@
          							<div class="vcard-names-container float-left col-10 col-md-12 pt-1 pt-md-3 pb-1 pb-md-3 js-sticky js-user-profile-sticky-fields" data-original-top="0px" style="position: sticky;">
 	             	 						<h1 class="vcard-names pl-2 pl-md-0">
 									<span class="p-name vcard-fullname d-block overflow-hidden">
-										<h3>
+										<h2>
 										<br><span style="color: rgb(18, 246, 87);">Dr. von Steinkirch (bt3gl) </span><br>
-										</h3>
+										</h2>
 									</span>
 									<span class="p-nickname vcard-username d-block"> 
 										<strong>
@@ -186,7 +186,7 @@
 											<br>Theoretical Astrophysicist turned AI Principal Software Engineer. Science && Engineering are my Life. Building the Future with Integrity, Grit, and Dedication. 
 											 <br><br>
 											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub page</a> <br>
-											<a href="https://gist.github.com/von-steinkirch/7607c9a481a49dadfd1dcdd9acad15c5" target="_blank">⚡️ My 10-Year Goals</a>
+											<a href="https://gist.github.com/von-steinkirch/7607c9a481a49dadfd1dcdd9acad15c5" target="_blank">⚡️ My 10-year goals</a>
 										</h4>
 
 										</strong>
