--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 	     					<div class="flex-shrink-0 col-12 col-md-3 mb-4 mb-md-0">
      						</div>
 						<div class="flex-shrink-0 col-12 col-md-9 mb-4 mb-md-0">
-        						<div class="UnderlineNav width-full box-shadow-none hx_UnderlineNav-with-profile-color-modes-banner">
+        						<div class="UnderlineNav width-full box-shadow-none hx_UnderlineNav-with-profile--modes-banner">
           							<nav class="UnderlineNav-body">
             								<a class="UnderlineNav-item  selected " href="/">
 	              								<svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
@@ -48,7 +48,7 @@
 	       									For Fun || Profit
             								</a>
           							</nav>
-          							<div class="profile-color-modes js-promo-color-modes-banner-profile isInitialToggle">
+          							<div class="profile--modes js-promo--modes-banner-profile isInitialToggle">
             								<svg width="106" height="60" viewBox="0 0 106 60" fill="none" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
 	              								<g class="profile-color-modes-illu-group profile-color-modes-illu-red">
 		                							<path d="M37.5 58.5V57.5C37.5 49.768 43.768 43.5 51.5 43.5V43.5C59.232 43.5 65.5 49.768 65.5 57.5V58.5"></path>
@@ -235,7 +235,7 @@
 												<h3><span style="color: rgb(148, 97, 199);">Selected Expertise</span></h3>
 												<ol>
 			
-													<li><strong>AI && ML</strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
+													<li><strong><span style="color: orange;">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
 													<li><strong>Astrophysics</strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
 													<li><strong>Blockchains</strong> → <b><a href="https://gist.github.com/von-steinkirch/f0d4b40af214f7e23d23b496cc4d113e" target="_blank">DeSci</a></b>; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
 													<li><strong>Clean Code</strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
