--- a/public/index.html
+++ b/public/index.html
@@ -235,10 +235,10 @@
 												<h3><span style="color: rgb(148, 97, 199);">Selected Expertise</span></h3>
 												<ol>
 			
-													<li><strong><span style="color: pink;">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
-													<li><strong><span style="color: pink;">Astrophysics</span></strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
-													<li><strong><span style="color: pink;">Blockchains</span></strong> → <b><a href="https://gist.github.com/von-steinkirch/f0d4b40af214f7e23d23b496cc4d113e" target="_blank">DeSci</a></b>; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
-													<li><strong><span style="color: pink;">Clean Code</span></strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
+													<li><strong><span style="color: DeepPink;">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
+													<li><strong><span style="color: DeepPink;">Astrophysics</span></strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
+													<li><strong><span style="color: DeepPink;">Blockchains</span></strong> → <b><a href="https://gist.github.com/von-steinkirch/f0d4b40af214f7e23d23b496cc4d113e" target="_blank">DeSci</a></b>; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
+													<li><strong><span style="color: DeepPink;">Clean Code</span></strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
 												</ol>
 		
 										
