--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,9 @@
 											 <br><br>
 											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub page</a> <br>
 											<a href="https://gist.github.com/von-steinkirch/7607c9a481a49dadfd1dcdd9acad15c5" target="_blank">⚡️ My 10-year goals</a>
+											<a href="https://gist.github.com/von-steinkirch/74f0886d3c0eef167c4ef07be4aa0d52" target="_blank">🫟 My monogatari 漢字</a>
+
+											
 										</h4>
 
 										</strong>
