--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
 										<h4>
 											<br>Theoretical Astrophysicist turned AI Principal Software Engineer. Science && Engineering are my Life. Building the Future with Integrity, Grit, and Dedication. 
 											 <br><br>
-											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub page</a> <br>
+											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub Page</a> <br>
 					
 
 											
