--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 									<span class="p-nickname vcard-username d-block"> 
 										<strong>
 										<h4>
-											<br>Theoretical Astrophysicist turned AI Principal Software Engineer. Science && Engineering are my Life. Building the Future with Integrity, Grit, and Dedication. 
+											<br>Theoretical Astrophysicist turned Blockchain + AI Principal Software Engineer. Science && Engineering are my Life. Building the Future with Integrity, Grit, and Dedication. 
 											 <br><br>
 											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub Page</a> <br>
 											<a href="https://www.lilit.ai/waitlist" target="_blank">🔮 Emit a 333 Signal</a> <br>
