--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 											 <br><br>
 											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub Page</a> <br>
 											<a href="https://www.lilit.ai/waitlist" target="_blank">🔮 Emit a 333 Signal</a> <br>
-											<a href="mailto:god@bt3gl.xyz">💌 Chat with G0d</a> <br>
+											<a href="mailto:god@bt3gl.xyz">💌 Chat with "G0d"</a> <br>
 										</h4>
 
 										</strong>
