--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 											 <br><br>
 											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub Page</a> <br>
 											<a href="https://www.lilit.ai/waitlist" target="_blank">🔮 Emit a 333 Signal</a> <br>
-											<a href="https://gist.github.com/von-steinkirch/215ef560f49311dc7955d5ea74289ba0" target="_blank">🤖 Collaboration Handbook</a> <br>
+											<a href="https://gist.github.com/von-steinkirch/215ef560f49311dc7955d5ea74289ba0" target="_blank">🤖 Collaborator Guide</a> <br>
 											<a href="mailto:god@bt3gl.xyz?subject=A respectful message to Dr. Marina von Steinkirch">💌 Send Love to G0d</a> <br>
 										</h4>
 
