--- a/public/index.html
+++ b/public/index.html
@@ -184,8 +184,7 @@
 										<strong>
 										<h4>
 											<br>Theoretical Astrophysicist turned Blockchain && AI Principal Software Engineer. Science && Engineering are my Life. Building the future with Grit && Integrity.
-											 <br><br>
-											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub Page</a> <br>
+											 <a href="https://github.com/von-steinkirch" target="_blank">💻 GitHub.</a>
 										</h4>
 
 										</strong>
