--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
 										<strong>
 										<h4>
 											<br>Theoretical Astrophysicist turned Blockchain && AI Principal Software Engineer. Science && Engineering are my Life. Building the future with Grit && Integrity.
-											 <a href="https://github.com/von-steinkirch" target="_blank">💻 GitHub.</a>
+											 <a href="https://github.com/von-steinkirch" target="_blank">💻 GitHub Page</a>.
 										</h4>
 
 										</strong>
