--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,7 @@
 												<ol>
 			
 													<li><strong><span style="color: HotPink;">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
-													<li><strong><span style="color: HotPink;">Blockchains</span></strong> → <b><a href="https://gist.github.com/von-steinkirch/f0d4b40af214f7e23d23b496cc4d113e" target="_blank">DeSci</a></b>; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
+													<li><strong><span style="color: HotPink;">Blockchains</span></strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
 													<li><strong><span style="color: HotPink;">Astrophysics</span></strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
 													<li><strong><span style="color: HotPink;">Clean Code</span></strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
 												</ol>
