--- a/public/index.html
+++ b/public/index.html
@@ -243,7 +243,7 @@
 												<h2><span style="color: rgb(148, 97, 199);">Selected Experiences</span></h2>
 												
 												<ul>  
-													<li><strong>Blockchain && AI Principal Software Engineer</a> at the Next Big Thing (stealth af for now)</strong></li>
+													<li><strong>Blockchain && AI Principal Software Engineer</a> at the Next Big Thing (stealth for now)</strong></li>
 													<li><strong><a href="https://www.lilit.ai/" target="_blank">LILIT.ai</a>: next-gen decentralized prediction platform</a> with unorthodox <a href="https://github.com/lilit-org" target="_blank">pattern science</a></strong></li>
 													<li><strong>Co-founded <a target="_blank" href="https://github.com/urani-trade">urani.trade</a></strong>, an <b>R&D org for <a href="https://github.com/autistic-symposium/mev-toolkit" target="_blank">toxic-MEV minimization</a> && DeFi gamification</b></li> 
 													<li><strong>Blockchain Researcher && Engineer</strong>; XP from: <strong><a target="_blank" href="https://ethereum.foundation/">Ethereum PSE</strong></a>, <strong><a target="_blank" href="https://app.rook.fi/en/trade">KeeeperDAO</strong></a>, <strong><a target="_blank" href="/images/immunefi.png">Immunefi</a></strong> </li>
