--- a/public/index.html
+++ b/public/index.html
@@ -243,7 +243,7 @@
 												<h3><span style="color: rgb(148, 97, 199);">Selected Experiences</span></h3>
 												
 												<ul>  
-													<li><strong>Blockchain && AI Principal Software Engineer</a> at the Next Big Thing (stealth for now)</strong></li>
+													<li><strong>◼️◼️◼️◼️◼️◼️◼️◼️◼️ Principal Software Engineer at ◼️◼️◼️◼️◼️◼️◼️◼️ (stealth for now, duh)</strong></li>
 													<li><strong>Co-founded <a target="_blank" href="https://github.com/urani-trade">urani.trade</a></strong>, an <b>R&D org for <a href="https://github.com/autistic-symposium/mev-toolkit" target="_blank">toxic-MEV minimization</a> && DeFi gamification</b></li> 
 													<li><strong>Blockchain Researcher && Engineer</strong>; XP from: <strong><a target="_blank" href="https://ethereum.foundation/">Ethereum PSE</strong></a>, <strong><a target="_blank" href="https://app.rook.fi/en/trade">KeeeperDAO</strong></a>, <strong><a target="_blank" href="/images/immunefi.png">Immunefi</a></strong> </li>
 													<li><strong>Founding Engineer of the <a target="_blank" href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/102260123057669474950847799880201608080189635296019951388527127018360736317441">Blockchain</a> Team at Shopify</strong> (together with <strong>6 other shopi<a target="_blank" href="https://alexdanco.com/">f</a><a href="https://twitter.com/crypt0z_Ash" target="_blank">o</a><a href="https://twitter.com/CanadaKaz" target="_blank">l</a><a href="https://github.com/CorySvensson" target="_blank">k</a></strong>)</li>
