--- a/public/index.html
+++ b/public/index.html
@@ -176,14 +176,14 @@
          							<div class="vcard-names-container float-left col-10 col-md-12 pt-1 pt-md-3 pb-1 pb-md-3 js-sticky js-user-profile-sticky-fields" data-original-top="0px" style="position: sticky;">
 	             	 						<h1 class="vcard-names pl-2 pl-md-0">
 									<span class="p-name vcard-fullname d-block overflow-hidden">
-										<h2>
+										<h3>
 										<br><span style="color: rgb(18, 246, 87);">Dr. Marina von Steinkirch, PhD </span><br>
-										</h2>
+										</h3>
 									</span>
 									<span class="p-nickname vcard-username d-block"> 
 										<strong>
 										<h4>
-											<br>Theoretical Astrophysicist turned Blockchain + AI Principal Software Engineer
+											<br>Theoretical Astrophysicist turned Blockchain + AI Principal Software Engineer.
 											 <a href="https://github.com/von-steinkirch" target="_blank">💻 GitHub Profile</a>.
 										</h4>
 
