--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 									<span class="p-nickname vcard-username d-block"> 
 										<strong>
 										<h4>
-											<br>Theoretical Astrophysicist turned Blockchain + AI Principal Software Engineer.
+											<br>Theoretical Astrophysicist → Blockchain + AI Principal Software Engineer.
 											 <a href="https://github.com/von-steinkirch" target="_blank">💻 GitHub Profile</a>.
 										</h4>
 
