--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
 			       			 	<div class="user-profile-sticky-bar js-user-profile-sticky-bar d-none d-md-block" id="headerStuck">
 			          				<div class="user-profile-mini-vcard d-table">
 			            					<span class="user-profile-mini-avatar d-table-cell v-align-middle lh-condensed-ultra pr-2">
-			              						<img class="rounded-1 avatar-user" height="32" width="32" src="/images/marina.png">
+			              						<img class="rounded-1 avatar-user" height="32" width="32" src="/images/avatar.jpg">
 			            					</span>
 			            					<span class="d-table-cell v-align-middle lh-condensed">
 										<br><strong>motherofbots.eth</strong>
@@ -153,7 +153,7 @@
 			       				 </div>
 			        			<div class="clearfix d-flex d-md-block flex-items-center mb-4 mb-md-0">
 			          				<div class="position-relative d-inline-block col-2 col-md-12 mr-3 mr-md-0 flex-shrink-0" style="z-index:4;">
-							        	<a target="_blank" href="/images/marina.png">
+							        	<a target="_blank" href="/images/avatar.jpg">
 							        		<img style="height:auto;" alt="Avatar" width="260" height="260" id="headerImg" class="avatar avatar-user width-full border bg-white" src="/images/marina.png">
 							            	</a>
 							            
