--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
 			       			 	<div class="user-profile-sticky-bar js-user-profile-sticky-bar d-none d-md-block" id="headerStuck">
 			          				<div class="user-profile-mini-vcard d-table">
 			            					<span class="user-profile-mini-avatar d-table-cell v-align-middle lh-condensed-ultra pr-2">
-			              						<img class="rounded-1 avatar-user" height="32" width="32" src="/images/avatar.jpg">
+			              						<img class="rounded-1 avatar-user" height="32" width="32" src="./images/avatar.jpg">
 			            					</span>
 			            					<span class="d-table-cell v-align-middle lh-condensed">
 										<br><strong>motherofbots.eth</strong>
