--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href='/css/light.css' />
 	<link rel="stylesheet" href='/css/dark.css' />
 	<link rel="stylesheet" href='/css/syntax.css' />
-	<title>Dr. von Steinkirch's homepage</title>
+	<title>Dr. von Steinkirch's Page</title>
 	<link rel="icon" type="image/x-icon" href='/images/favicon.ico'>  
 	<meta name="theme-color" content="#1e2327">
 	<meta name="robots" content="noodp" />
