--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href='/css/light.css' />
 	<link rel="stylesheet" href='/css/dark.css' />
 	<link rel="stylesheet" href='/css/syntax.css' />
-	<title>bt3gl's homepage</title>
+	<title>Dr. von Steinkirch's Page</title>
 	<link rel="icon" type="image/x-icon" href='/images/favicon.ico'>  
 	<meta name="theme-color" content="#1e2327">
 	<meta name="robots" content="noodp" />
@@ -183,10 +183,7 @@
 									<span class="p-nickname vcard-username d-block"> 
 										<strong>
 										<h4>
-											<br>Theoretical Astrophysicist turned AI Principal Software Engineer. Science && Engineering are my Life. Building the Future with Integrity, Grit, and Dedication. 
-											 <br><br>
-											<a href="https://github.com/von-steinkirch" target="_blank">💻 My GitHub</a> <br>
-											<a href="https://gist.github.com/von-steinkirch/599acc4fe322af810f7c588abc25244a" target="_blank">⚡️ My 10-Year Goals</a>
+											<br>Theoretical Astrophysicist → Blockchain + AI Principal Software Engineer
 										</h4>
 
 										</strong>
