--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
 	             	 						<h1 class="vcard-names pl-2 pl-md-0">
 									<span class="p-name vcard-fullname d-block overflow-hidden">
 										<h3>
-										<br><span style="color: rgb(18, 246, 87);">Marina von Steinkirch </span><br>
+										<br><span style="color: rgb(18, 246, 87);">Marina von Steinkirch, PhD </span><br>
 										</h3>
 									</span>
 									<span class="p-nickname vcard-username d-block"> 
