--- a/public/index.html
+++ b/public/index.html
@@ -146,9 +146,6 @@
 			            					<span class="user-profile-mini-avatar d-table-cell v-align-middle lh-condensed-ultra pr-2">
 			              						<img class="rounded-1 avatar-user" height="32" width="32" src="/images/steinkirch.png">
 			            					</span>
-			            					<span class="d-table-cell v-align-middle lh-condensed">
-										<br><strong>motherofbots.eth</strong>
-							            	</span>
 			          				</div>
 			       				 </div>
 			        			<div class="clearfix d-flex d-md-block flex-items-center mb-4 mb-md-0">
@@ -164,7 +161,7 @@
 								                    			<div class="f6 lh-condensed user-status-header d-inline-flex user-status-emoji-only-header circle">
 								                      				<div class="user-status-emoji-container flex-shrink-0 mr-2 d-flex flex-items-center flex-justify-center ">
 								                        				<div>
-																<g-emoji class="g-emoji">🪻</g-emoji>
+																<g-emoji class="g-emoji">💎</g-emoji>
 															</div> 
 								                      				</div>
 								                    			</div>
@@ -183,7 +180,8 @@
 									<span class="p-nickname vcard-username d-block"> 
 										<strong>
 										<h4>
-											<br>Theoretical Astrophysicist → Blockchain + AI Principal Software Engineer
+											<br>Theoretical Astrophysicist → 
+											<br>Blockchain + AI Principal Software Engineer
 										</h4>
 
 										</strong>
