--- a/public/index.html
+++ b/public/index.html
@@ -181,10 +181,10 @@
 										<strong>
 										<h4>
 											<br>Theoretical Astrophysicist → 
-											<br>Blockchain + AI Principal Software Engineer
+											<br>Blockchain + AI 
+											<br>Principal Software Engineer
 										</h4>
-
-										</strong>
+									</strong>
 									</span>
          								</div>
 								</h1>
