--- a/public/index.html
+++ b/public/index.html
@@ -230,7 +230,7 @@
 												<ol>
 			
 													<li><strong><span style="color: HotPink;">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
-													<li><strong><span style="color: HotPink;">Blockchains</span></strong> → DeSci; Macro; MEV; Protocols; <a href="https://web.archive.org/web/20090621224750/http://www.steinkirch.org/bookmarks.html" target="_blank" >Game Theory</a>; Cryptography; ZKPs </li>
+													<li><strong><span style="color: HotPink;">Blockchains</span></strong> → DeSci; Macro; MEV; Protocols; <b><a href="https://web.archive.org/web/20090621224750/http://www.steinkirch.org/bookmarks.html" target="_blank" >Game Theory</a></b>; Cryptography; ZKPs </li>
 													<li><strong><span style="color: HotPink;">Astrophysics</span></strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
 													<li><strong><span style="color: HotPink;">Clean Code</span></strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
 												</ol>
