--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
   				</div>
 			</div>
 
-			<div class="container-xl px-3 px-md-4 px-lg-5">
+			<div class="container-lg px-3 px-md-4 px-lg-5">
 				<div class="gutter-condensed gutter-lg flex-column flex-md-row d-flex">
 			   		 <div class="flex-shrink-0 col-12 col-md-3 mb-4 mb-md-0">
 			     			 <div class="h-card mt-md-n5" style="margin-top:24px">
@@ -191,7 +191,7 @@
 						 </div>
 						
 						<!-- News Box -->
-						<div class="Box mt-6">
+						<div class="Box mt-4">
 							<div class="Box-header">
 								<h3 class="Box-title">
 									<span style="color: HotPink; text-align: center; display: block;">LATEST NEWS</span>
@@ -199,12 +199,9 @@
 							</div>
 							<div class="Box-body p-4">
 								<div class="d-flex flex-column">
-									<div class="mb-1">
-										<strong><span style="color: rgb(246, 146, 5);">The Hero Squad Assembles!</span></strong>
-										<p class="mb-6">Our super-secret team has grown to five incredible builders — 
+										<strong><span style="color: rgb(18, 246, 87);">The Hero Squad Assembles!</span></strong>
+										<p class="mb-2 text-mono text-small">Our super-secret team has grown to five incredible builders — 
 											and I can't wait to share the revolutionary work we're bringing to life during this Eclipse Season! Stay tune, fam!</p>
-										<small class="text-mono text-small">2025; September</small>
-									</div>
 								</div>
 							</div>
 						</div>
