--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
   				</div>
 			</div>
 
-			<div class="container-lg px-3 px-md-4 px-lg-5">
+			<div class="container-xl px-3 px-md-4 px-lg-5">
 				<div class="gutter-condensed gutter-lg flex-column flex-md-row d-flex">
 			   		 <div class="flex-shrink-0 col-12 col-md-3 mb-4 mb-md-0">
 			     			 <div class="h-card mt-md-n5" style="margin-top:24px">
