--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 	     					<div class="flex-shrink-0 col-12 col-md-3 mb-4 mb-md-0">
      						</div>
 						<div class="flex-shrink-0 col-12 col-md-9 mb-4 mb-md-0">
-        						<div class="UnderlineNav width-full box-shadow-none hx_UnderlineNav-with-profile-color-modes-banner">
+        						<div class="UnderlineNav width-full box-shadow-none hx_UnderlineNav-with-profile-color-modes-banner" style="margin-left: 2rem;">
           							<nav class="UnderlineNav-body">
             								<a class="UnderlineNav-item  selected " href="/">
 	              								<svg class="octicon octicon-repo UnderlineNav-octicon hide-sm" height="16" viewBox="0 0 16 16" version="1.1" width="16">
@@ -138,7 +138,7 @@
 
 			<div class="container-xl px-3 px-md-4 px-lg-5">
 				<div class="gutter-condensed gutter-lg flex-column flex-md-row d-flex">
-			   		 <div class="flex-shrink-0 col-12 col-md-3 mb-4 mb-md-0">
+			   		 <div class="flex-shrink-0 col-12 col-md-3 mb-4 mb-md-0" style="margin-right: 2rem;">
 			     			 <div class="h-card mt-md-n5" style="margin-top:24px">
 			       			 	<div class="user-profile-sticky-bar js-user-profile-sticky-bar d-none d-md-block" id="headerStuck">
 			          				<div class="user-profile-mini-vcard d-table">
