--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
 						 </div>
 						
 						<!-- News Box -->
-						<div class="Box mt-4">
+						<div class="Box mt-5">
 							<div class="Box-header">
 								<h3 class="Box-title">
 									<span style="color: HotPink; text-align: center; display: block;">LATEST NEWS</span>
@@ -201,7 +201,7 @@
 								<div class="d-flex flex-column">
 										<strong><span style="color: rgb(18, 246, 87);">The Hero Squad Assembles!</span></strong>
 										<p class="mb-2 text-mono text-small">Our super-secret team has grown to five incredible builders — 
-											and I can't wait to share the revolutionary work we're bringing to life during this Eclipse Season! Stay tune, fam!</p>
+											and I can't wait to share the revolutionary work we're bringing to life during this Eclipse Season! Stay tuned, fam!</p>
 								</div>
 							</div>
 						</div>
