--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,19 @@
 	<meta property="og:image:width" content="2048">
 	<meta property="og:image:height" content="1024">
 	<link href="/index.xml" rel="alternate" type="application/rss+xml" title="" />
+	<style type="text/css">
+		/* Make navigation tab fonts larger */
+		.UnderlineNav-item {
+			font-size: 18px !important;
+			font-weight: 500;
+		}
+		
+		.UnderlineNav-item.selected {
+			font-weight: 600;
+			border-bottom-width: 4px !important;
+			border-bottom-color: #e85a4f !important;
+		}
+	</style>
 </head>
 
 <body>
