--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,10 @@
         						<div class="UnderlineNav width-full box-shadow-none hx_UnderlineNav-with-profile-color-modes-banner" style="margin-left: 2rem;">
           							<nav class="UnderlineNav-body">
             								<a class="UnderlineNav-item  selected " href="/">
-	              								for (fun && profit)
+	              								<code style="font-size: 0.8em;">for (fun && profit)</code>
             								</a>
             								<a class="UnderlineNav-item " href="https://www.vonsteinkirch.com/post">
-	       										for (fun || profit)
+	       										<code style="font-size: 0.8em;">for (fun || profit)</code>
             								</a>
           							</nav>
           							<div class="profile-color-modes js-promo-color-modes-banner-profile isInitialToggle">
@@ -219,10 +219,10 @@
 						<div class="UnderlineNav user-profile-nav d-block d-md-none position-sticky top-0 pl-3 ml-n3 mr-n3 pr-3 bg-white" style="z-index:3;">
 							<nav class="UnderlineNav-body">
 								<a class="UnderlineNav-item  selected " href="/">
-										for (fun && profit)
+										<code style="font-size: 1.2em;">for (fun && profit)</code>
 							    	</a>
 							    	<a class='UnderlineNav-item  ' href="https://www.vonsteinkirch.com/post/">
-										for (fun || profit)
+										<code style="font-size: 1.2em;">for (fun || profit)</code>
 							    	</a>
 							</nav>
 						</div>
