--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>404 - Page Not Found</title>
+    <title>404 - Page Not Found (or not added yet 😜)</title>
     <style>
         body {
             margin: 0;
@@ -73,7 +73,7 @@
     <div class="container">
         <h1 class="error-code">404</h1>
         <p class="message">Page not found</p>
-        <a href="/" class="home-link">Go Home</a>
+        <a href="/" class="home-link">go big && go home</a>
     </div>
 </body>
 </html>
