--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>404 - Page Not Found (or not added yet 😜)</title>
+    <title>404444444444444</title>
     <style>
         body {
             margin: 0;
@@ -71,8 +71,8 @@
 <body>
     <div class="glow"></div>
     <div class="container">
-        <h1 class="error-code">404</h1>
-        <p class="message">Page not found</p>
+        <h1 class="error-code">44044</h1>
+        <p class="message">page not found (or not added yet 😜)</p>
         <a href="/" class="home-link">go big && go home</a>
     </div>
 </body>
