--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>40444444444444444444444444444444444444444444444444444444444444444444444444444</title>
+    <title>404</title>
     <style>
         body {
             margin: 0;
