--- a/public/index.html
+++ b/public/index.html
@@ -127,10 +127,10 @@
 		                  								<path d="M40.6983 31.5C40.5387 29.6246 40.6456 28.0199 41.1762 27.2317C42.9939 24.5312 49.7417 26.6027 52.5428 30.2409C54.2551 29.8552 56.0796 29.6619 57.9731 29.6619C59.8169 29.6619 61.5953 29.8452 63.2682 30.211C66.0833 26.5913 72.799 24.5386 74.6117 27.2317C75.6839 28.8246 75.0259 33.7525 73.9345 37.5094C74.2013 37.9848 74.4422 38.4817 74.6555 39"></path>
 										</g>
             								</svg>
-						            		<span class="profile-color-modes-toggle js-promo-color-modes-toggle no-select" tabindex="0" onclick="switchTheme()">
-						              			<div class="profile-color-modes-toggle-track no-select">
+						            		<span class="profile-color-modes-toggle js-promo-color-modes-toggle no-select neon-toggle" tabindex="0" onclick="switchTheme()">
+						              			<div class="profile-color-modes-toggle-track no-select neon-toggle-track">
 										</div>
-						              			<div class="profile-color-modes-toggle-thumb js-promo-color-modes-thumb">
+						              			<div class="profile-color-modes-toggle-thumb js-promo-color-modes-thumb neon-toggle-thumb">
 						                			<svg style="fill: var(--color-profile-color-modes-toggle-moon); margin: 7px 0 0 7px;" width="14" height="13" viewBox="0 0 14 13" xmlns="http://www.w3.org/2000/svg">
 						                  				<path fill-rule="evenodd" clip-rule="evenodd" d="M4.52208 7.71754C7.5782 7.71754 10.0557 5.24006 10.0557 2.18394C10.0557 1.93498 10.0392 1.68986 10.0074 1.44961C9.95801 1.07727 10.3495 0.771159 10.6474 0.99992C12.1153 2.12716 13.0615 3.89999 13.0615 5.89383C13.0615 9.29958 10.3006 12.0605 6.89485 12.0605C3.95334 12.0605 1.49286 10.001 0.876728 7.24527C0.794841 6.87902 1.23668 6.65289 1.55321 6.85451C2.41106 7.40095 3.4296 7.71754 4.52208 7.71754Z"></path>
 											</svg>
