--- a/public/index.html
+++ b/public/index.html
@@ -207,9 +207,13 @@
 							<div class="Box-body p-4">
 								<div class="d-flex flex-column">
 										<strong><span style="color: rgb(18, 246, 87);">The Hero Squad Assembles!</span></strong>
-										<p class="mb-2 text-mono text-small">Our super-secret team has grown to five incredible builders — 
+										<p class="mb-6 text-mono text-small">Our super-secret team has grown to five incredible builders — 
 											and I can't wait to share the revolutionary work we're bringing to life. Stay tuned!</p>
-								</div>
+										<p class="mb-2 text-mono text-small">
+										New additions to our Game of $CHOICES Humanist section: 
+										<a href="https://midsummer.gitbook.io/choices/choices/choose-your-adventure/humanism/the-usdchoice-of-humanism/living-as-a-logician/become-an-humanist"target="_blank">please welcome the great duo, Scott && Curtis!</a>
+										</p>
+									</div>
 							</div>
 						</div>
 						
