--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
 											and I can't wait to share the revolutionary work we're bringing to life. Stay tuned!</p>
 										<strong><span style="color: rgb(18, 246, 87);">New additions to our Game of $CHOICES Humanist section!</span></strong>
 										<p class="mb-2 text-mono text-small">Please welcome the great duo,
-										<a href="https://choices.vonsteinkirch.com/choices/choose-your-adventure/humanism/the-usdchoice-of-humanism/living-as-a-logician/become-an-humanist" target="_blank">Scott && Curtis!</a>
+										<a href="https://choices.vonsteinkirch.com/choices/choose-your-adventure/humanism/the-usdchoice-of-humanism/living-as-a-logician/become-an-humanist#talented-contemporary-humanists" target="_blank">Scott && Curtis!</a>
 										</p>
 									</div>
 							</div>
