--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,7 @@
 										<strong><span style="color: rgb(18, 246, 87);">The Hero Squad Assembles!</span></strong>
 										<p class="mb-6 text-mono text-small">Our super-secret team has grown to five incredible builders — 
 											and I can't wait to share the revolutionary work we're bringing to life. Stay tuned!</p>
-										<strong><span style="color: rgb(18, 246, 87);">New additions to the Humanist section of our Game of $CHOICES!</span></strong>
+										<strong><span style="color: rgb(18, 246, 87);">New additions to our Game of $CHOICES Humanist section!</span></strong>
 										<p class="mb-2 text-mono text-small">A warm welcome from G✪d to the great duo,
 										<b>
 											<a href="https://choices.vonsteinkirch.com/choices/choose-your-adventure/humanism/the-usdchoice-of-humanism/living-as-a-logician/become-an-humanist#talented-contemporary-humanists" target="_blank">Scott && Curtis</a>.
