--- a/public/index.html
+++ b/public/index.html
@@ -268,7 +268,7 @@
 												</ul>
 												    
 												<br>
-												<h1><span style="color: rgb(148, 97, 199);">Proud Moments</span></h1>
+												<h1><span style="color: rgb(148, 97, 199);">Nerdhood</span></h1>
 												
 												<ul>
 													<li><strong>Post-graduate e-books: <a target="_blank" href="http://www.astro.sunysb.edu/steinkirch/books/group.pdf">Group Theory</a></strong>; <strong><a target="_blank" href="https://www.freebookcentre.net/physics-books-download/Introduction-to-Quantum-Field-Theory-by-Marina-von-Steinkirch.html">Quantum Field Theory</a></strong>; <strong><a target="_blank" href="http://www.astro.sunysb.edu/steinkirch/books/qi.pdf">Quantum Information</a></strong></li>
