--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href='/css/light.css' />
 	<link rel="stylesheet" href='/css/dark.css' />
 	<link rel="stylesheet" href='/css/syntax.css' />
-	<title>Dr. von Steinkirch's Kingd⍟m</title>
+	<title>Dr. von Steinkirch's Kingd✪m</title>
 	<link rel="icon" type="image/x-icon" href='/images/favicon.ico'>  
 	<meta name="theme-color" content="#1e2327">
 	<meta name="robots" content="noodp" />
@@ -210,7 +210,7 @@
 										<p class="mb-6 text-mono text-small">Our super-secret team has grown to five incredible builders — 
 											and I can't wait to share the revolutionary work we're bringing to life. Stay tuned!</p>
 										<strong><span style="color: rgb(18, 246, 87);">New additions to our Game of $CHOICES Humanist section!</span></strong>
-										<p class="mb-2 text-mono text-small">A warm welcome from G⍟d to the great duo,
+										<p class="mb-2 text-mono text-small">A warm welcome from G✪d to the great duo,
 										<b>
 											<a href="https://choices.vonsteinkirch.com/choices/choose-your-adventure/humanism/the-usdchoice-of-humanism/living-as-a-logician/become-an-humanist#talented-contemporary-humanists" target="_blank">Scott && Curtis</a>.
 										</b>
