--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>404</title>
+    <title>Dr. von Steinkirch's Kingd✪m - 404</title>
     <style>
         body {
             margin: 0;
@@ -72,8 +72,8 @@
     <div class="glow"></div>
     <div class="container">
         <h1 class="error-code">44044</h1>
-        <p class="message">page not found (or not added yet 😜)</p>
-        <a href="/" class="home-link">go big && go home</a>
+        <p class="message">page not found</p>
+        <a href="/" class="home-link">back home</a>
     </div>
 </body>
 </html>
