--- a/public/index.html
+++ b/public/index.html
@@ -213,7 +213,7 @@
 										<strong><span style="color: rgb(18, 246, 87);">Happy Eclipse Season!</span></strong>
 										<p class="mb-2 text-mono text-small">
 											I'll be absolutely unreachable, focusing 100% on <a href="https://gist.github.com/von-steinkirch/7b0a78df77d7d15f263b99be1713d996" target="_blank">what matters</a>.
-											Wishing my friends wisdom && good luck. See you on the flip side — on Halloween season!
+											Wishing my friends wisdom && good luck. See you on the flip side — around Halloween season!
 										</p>
 									</div>
 							</div>
