--- a/public/index.html
+++ b/public/index.html
@@ -212,9 +212,9 @@
 										</p>
 										<strong><span style="color: rgb(18, 246, 87);">Happy <a href="https://science.nasa.gov/eclipses/" target="_blank">Eclipse</a> Season!</span></strong>
 										<p class="mb-2 text-mono text-small">
-											I'll be absolutely unreachable to anyone who is not part of
+											I'll be absolutely unreachable to anyone who isn't part of
 											<a href="https://gist.github.com/von-steinkirch/7b0a78df77d7d15f263b99be1713d996" target="_blank">what matters</a>.
-											Wishing my anon friends wisdom && good luck. See you on the flip side — on Halloween season!
+											Wishing my anon friends wisdom && good luck. See you on the flip side — around Halloween season!
 										</p>
 									</div>
 							</div>
