--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
 										<p class="mb-2 text-mono text-small">
 											I'll be <b>ABSOLUTELY</b> unreachable to anyone who isn't part of
 											<a href="https://gist.github.com/von-steinkirch/7b0a78df77d7d15f263b99be1713d996" target="_blank">what matters</a>.
-											Wishing my anon friends wisdom && good luck. See you on the flip side: Halloween season!
+											Wishing my anon friends wisdom && good luck. See you on the flip side: <a href="https://www.youtube.com/watch?v=5t10mu8yWpI" target="_blank">Halloween</a> season!
 										</p>
 									</div>
 							</div>
