--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
 										<p class="mb-2 text-mono text-small">Our super-secret team has grown to five incredible builders — 
 											and I can't wait to share the innovative work we're bringing to life. Stay tuned!
 										</p>
-										<strong><span style="color: rgb(18, 246, 87);">Happy <a href="https://science.nasa.gov/eclipses/" target="_blank">Eclipse</a> Season!</span></strong>
+										<strong><span style="color: rgb(18, 246, 87);">Happy Eclipse Season!</span></strong>
 										<p class="mb-2 text-mono text-small">
 											I'll be <b>ABSOLUTELY</b> unreachable to anyone who isn't part of what
 											<a href="https://gist.github.com/von-steinkirch/7b0a78df77d7d15f263b99be1713d996" target="_blank">matters</a>.
